overlappping issue fixed from the dropdown library

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -12,7 +12,7 @@ html {
 }
 
 nav {
-  z-index: 9999 !important;
+  z-index: 999999999 !important;
 }
 
 html,
